<resources>
    <string name="app_name">校脸</string>
    <string name="chat_refuse">拒绝</string>
    <string name="chat_accept">接受</string>
    <string name="chat_time">时间:</string>
    <string name="chat_remark">备注:</string>
    <string name="cannot_invite_warn">还未选择学校，不能发送邀请哦 :)</string>
    <string name="evaluate_title">发表评价</string>
    <string name="evaluate_guide">请输入您对这位同学本次导游的评价,评价成功后赢取刮刮乐有机会赢得大奖。</string>
    <string name="evaluate_college">请留下您对本所高校的印象,评价成功后领取刮刮乐有机会赢得大奖。</string>
    <string name="evaluate_grade">评分</string>
    <string name="evaluate_schoolgrade">校园评分</string>
    <string name="evaluate_guidegrade">导游评分</string>
    <string name="evaluate_submit">发表评价</string>
    <string name="ggl_title1">感谢您的评价:)</string>
    <string name="ggl_title2">恭喜您得到一次刮刮乐机会！</string>
    <string name="ggl_content1">1.活动规则：撰写出游评价(30字+两张带图评价)，即可获得抽取机会赢得海量优惠券。</string>
    <string name="ggl_content2">2.活动步骤：出游完成后-点击“写评价”-发部评价-抽奖。</string>
    <string name="ggl_content3">3.如何查看优惠券？打开“笑脸”APP-我-我的卡券包；即可看到优惠券信息。</string>

    <string name="conversation_guider">我是游客</string>
    <string name="conversation_tourist">我是导游</string>

    <string name="no_time_warn">请选择出游时间 :)</string>
    <string name="no_guider_warn">在该校没有找到符合您全部条件的导游，换个条件试试吧 :)</string>
    <string name="in_match_now">正在为您匹配中 :)</string>
    <string name="send_success">发送成功 :)</string>
    <string name="match_now_warn">正在为您匹配中 :)</string>
    <string name="wish">祝您旅程愉快 :)</string>

    <string name="confirm_start_travel">确定现在开始您的旅程吗？</string>
    <string name="choose_record_route">是否为您记录路径？</string>
    <string name="confirm_end_travel">确定现在结束您的旅程吗？</string>
    <string name="choose_comment">发表一下您对本次旅游高校和导游的评价吧 :)</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="to_comment">去发表</string>
    <string name="not_comment">不发表了</string>
    <string name="not_yet">未填写</string>
    <string name="not_login">未登录</string>
</resources>
