<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2.5"
        android:background="@mipmap/ggl_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="#88ffffff"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/ib1_ggl_back"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@mipmap/back_black"
                    android:background="@android:color/transparent"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.5"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="3"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ggl_title1"
                        android:textSize="20dp"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:paddingLeft="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ggl_title2"
                        android:textSize="13dp"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="9.5"
        android:id="@+id/LL_lottery_content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/RL_lottery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="21">
            <RelativeLayout
                android:layout_centerInParent="true"
                android:id="@+id/RL_lottery_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/evaluate_table_shape"
                >
                <ImageView
                    android:id="@+id/redpacket"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/redpackage"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
                <RelativeLayout
                    android:id="@+id/RL_lottery_scratch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="25dp"
                    >
                    <com.funOfSchool.ui.GuaGuaKa
                        android:id="@+id/guagauka"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="28"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/Tv1"
                    android:text="@string/ggl_content1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:layout_below="@+id/Tv1"
                    android:id="@+id/Tv2"
                    android:text="@string/ggl_content2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:layout_below="@+id/Tv2"
                    android:id="@+id/Tv3"
                    android:text="@string/ggl_content3"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>