<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F0F0F2">

    <LinearLayout
        android:id="@+id/LL_evaluate_title"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/Bt_evaluate_back"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="16dp"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@mipmap/back_black"
                android:background="@android:color/transparent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluate_title"
                android:layout_centerInParent="true"
                style="@style/TitleText"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="11"
        android:orientation="vertical"
        android:paddingTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="#FFFFFF"
            >
            <LinearLayout
                android:background="@drawable/evaluate_boder"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/Iv_evaluate_portrait"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="fitXY"
                        android:padding="4dp"
                        android:src="@mipmap/evaluate_photo_before"
                        android:background="@android:color/transparent"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingTop="20dp">
                    <EditText
                        android:id="@+id/Et_evaluate_et1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/evaluate_guide"
                        android:textColorHint="#CCCCCC"
                        android:textSize="15dp"
                        android:background="@drawable/evaluate_edit_shape"
                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/evaluate_boder"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/Iv_evaluate_college"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="4dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@mipmap/evaluate_photo_before"
                        android:background="@android:color/transparent"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingTop="20dp">
                    <EditText
                        android:id="@+id/Et_evaluate_et2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/evaluate_college"
                        android:textColorHint="#CCCCCC"
                        android:textSize="15dp"
                        android:background="@drawable/evaluate_edit_shape"
                        />

                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:background="@drawable/evaluate_boder"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1.3"
                android:orientation="horizontal">
                <GridView
                    android:layout_centerInParent="true"
                    android:id="@+id/gridView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:numColumns="4"
                    android:columnWidth="90dp"
                    android:stretchMode="columnWidth"
                    android:gravity="center"
                    android:layout_centerVertical="true">

                </GridView>
            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#FFFFFF"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_evaluate"
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:src="@mipmap/evaluate_grade"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"/>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_toRightOf="@+id/iv_evaluate"
                        android:paddingLeft="10dp">
                        <TextView
                            android:id="@+id/tv_evaluate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="评分"
                            style="@style/FirstText"
                            android:layout_centerVertical="true"/>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evaluate_schoolgrade"
                        android:layout_centerHorizontal="true"
                        style="@style/SecondText"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3">
                    <RatingBar
                        android:id="@+id/rtb_schoolRatingBar"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="3"
                        android:isIndicator="false"
                        style="@style/foodRatingBar"
                        android:layout_alignParentTop="true" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:paddingTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evaluate_guidegrade"
                        android:layout_centerHorizontal="true"
                        style="@style/SecondText"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3">
                    <RatingBar
                        android:id="@+id/rtb_guadeRatingBar"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="3"
                        android:isIndicator="false"
                        style="@style/foodRatingBar"
                        />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:paddingTop="20dp"
            >
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/RL_evaluate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/Bt_evaluate_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/evaluate_submit"
                    android:textSize="14sp"
                    android:textColor="@drawable/evaluate_btn_text_style"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_bg"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
